# document_control

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/input/: consulta_erp.xlsx  data_erp.xlsx  data_tags.xlsx
data/output/: monitoring_report_28-11-2025.xlsx
docucontrol/: __init__.py
docucontrol/app/: __init__.py  gui.py
docucontrol/cli/: __init__.py  monitoring.py  ovr.py  reclamations.py  returns.py
docucontrol/config/: __init__.py  logging.py  settings.py
docucontrol/core/: __init__.py  exceptions.py  models.py
docucontrol/infra/: __init__.py
docucontrol/infra/email/: __init__.py  html_table.py
docucontrol/infra/integrations/: __init__.py  erp_repository.py
docucontrol/infra/io/: __init__.py  excel_styles.py  excel_writer.py
docucontrol/legacy/: __init__.py  apply_style_email.py  email_identification.py  gaia_data_process.py  po_identification.py  prodoc_data_process.py  tr_data_process.py
docucontrol/services/: __init__.py
docucontrol/services/reporting/: __init__.py  monitoring_service.py  ovr_service.py  reclamations_service.py
docucontrol/services/returns/: __init__.py  base.py  gaia_service.py  prodoc_service.py  tr_service.py
docucontrol/utils/: __init__.py  dates.py  paths.py
scripts/: run_monitoring_report.py  run_ovr.py  run_reclamations.py  run_returns.py
