[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docucontrol"
version = "0.2.0"
description = "Automatización de reportes y control documental"
authors = [{name = "DocuControl Team", email = "docucontrol@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.3.4",
    "openpyxl==3.2.0b1",
    "customtkinter==5.2.2",
    "Pillow==12.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["docucontrol*"]

